--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-first-components-library",
   "version": "1.0.0",
-  "description": "",
+  "description": "Test npm",
   "homepage": "https://github.com/luanamarquesf/react-native-library",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
