--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-native": "^0.67.1"
+    "react-native": "^0.67.1",
+    "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
