--- a/example/ios/link-assets-manifest.json
+++ b/example/ios/link-assets-manifest.json
@@ -2,60 +2,52 @@
   "migIndex": 1,
   "data": [
     {
-      "path": "fonts/Inter-Bold.ttf",
-      "sha1": "47bb768bc0dce7072a0c11562c76aec42edd1b6a"
+      "path": "fonts/Roboto-Black.ttf",
+      "sha1": "3f8e401d808f6ce84b542266726514ac8be73171"
     },
     {
-      "path": "fonts/Inter-Light.ttf",
-      "sha1": "8343c117d79351f7724791f8589726c37ea46129"
+      "path": "fonts/Roboto-BlackItalic.ttf",
+      "sha1": "03d6e3747d862385dbe48e8296385b9236101a62"
     },
     {
-      "path": "fonts/Inter-Medium.ttf",
-      "sha1": "471c09743f2ae171051f13575fa99b3a0700ca77"
+      "path": "fonts/Roboto-Bold.ttf",
+      "sha1": "62442a18a9fe9457c1afeabf683d263a691b7798"
     },
     {
-      "path": "fonts/Inter-Regular.ttf",
-      "sha1": "f2fa90d264ae0063b0cda7fee6721b405dd4b866"
+      "path": "fonts/Roboto-BoldItalic.ttf",
+      "sha1": "2f10ad9e8cab0880182705c4e0fbaeabae706e64"
     },
     {
-      "path": "fonts/Inter-SemiBold.ttf",
-      "sha1": "a7da962604d540f7024f23ee655c5aaac779978f"
+      "path": "fonts/Roboto-Italic.ttf",
+      "sha1": "65f3f6a7e1bd2fa6f2df35e4b07775d7f1dde4f0"
     },
     {
-      "path": "fonts/Montserrat-Black.ttf",
-      "sha1": "5271bc1609db4ef6257ed6f0429c2b81fae04ce5"
+      "path": "fonts/Roboto-Light.ttf",
+      "sha1": "18788c5d630fa695f9283f6393bfa541b2031508"
     },
     {
-      "path": "fonts/Montserrat-Bold.ttf",
-      "sha1": "8f23dacf7d2f4aa9be53c957f48009f610965be5"
+      "path": "fonts/Roboto-LightItalic.ttf",
+      "sha1": "6e01f9df9449565697032b002706a94b51862bbe"
     },
     {
-      "path": "fonts/Montserrat-ExtraBold.ttf",
-      "sha1": "172ea7eb3e00591802c16df73abc27386fc11cd7"
+      "path": "fonts/Roboto-Medium.ttf",
+      "sha1": "3c6a09fcc6a454924c81af7dff94fc6d399ed79b"
     },
     {
-      "path": "fonts/Montserrat-Italic.ttf",
-      "sha1": "798c701450f6bc08217f73c1ac569100cddc2947"
+      "path": "fonts/Roboto-MediumItalic.ttf",
+      "sha1": "b3aa2d8f16d5a331fdced82f213a052b204eaca0"
     },
     {
-      "path": "fonts/Montserrat-Medium.ttf",
-      "sha1": "d7ddcd6682a72ff6044cf2015a71b183494ce320"
+      "path": "fonts/Roboto-Regular.ttf",
+      "sha1": "56c5c0d38bde4c1f1549dda43db37b09c608aad3"
     },
     {
-      "path": "fonts/Montserrat-MediumItalic.ttf",
-      "sha1": "ceadac9926836d5fc0ee14f94567f0ea25979fa2"
+      "path": "fonts/Roboto-Thin.ttf",
+      "sha1": "58c733e22bceeaf9609ce578eca92ac303c6d92f"
     },
     {
-      "path": "fonts/Montserrat-Regular.ttf",
-      "sha1": "21ead490649992f7200fc1f3839b9fc08e882afe"
-    },
-    {
-      "path": "fonts/Montserrat-SemiBold.ttf",
-      "sha1": "6b005ad9e70be1343f8e7e0c157d4aad66b285c9"
-    },
-    {
-      "path": "fonts/Montserrat-Thin.ttf",
-      "sha1": "fbf6fa7e533c26ebabf8bdc77bf492858d0648b7"
+      "path": "fonts/Roboto-ThinItalic.ttf",
+      "sha1": "cc79d5a23bd0ec08b1d99f5390bf33cacc3082f4"
     }
   ]
 }
