--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-first-components-library",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Test npm",
   "homepage": "https://github.com/luanamarquesf/react-native-library",
   "main": "lib/index.js",
@@ -54,6 +54,7 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
+    "react-native-svg": "*",
     "styled-components": "*"
   },
   "jest": {
@@ -68,6 +69,7 @@
     ]
   },
   "dependencies": {
-    "@types/styled-components-react-native": "^5.1.3"
+    "@types/styled-components-react-native": "^5.1.3",
+    "react-native-svg": "^13.9.0"
   }
 }
